# hello_drmprime

./: .gitignore  MMapFrame.h  Makefile  README.md  deleted.txt  drmprime_out.c  drmprime_out.cpp  drmprime_out.h  extra.h  extra_drm.h  hello_drmprime.c  hello_drmprime.cpp  test_latency.sh  test_latency_jetson_1080p.sh
common_consti/: LEDSwap.h  Logger.hpp  ThreadsafeQueue.hpp  TimeHelper.hpp
drm-howto/: .gitignore  Makefile  modeset  modeset-atomic  modeset-atomic.c  modeset-double-buffered  modeset-double-buffered_latency.cpp  modeset-vsync  modeset-vsync.c  modeset-vsync2.cpp  modeset_args.h  modeset_helper.h  modeset_latency.cpp
hello_drmprime/: CMakeLists.txt  CUDAGLInteropHelper.cpp  CUDAGLInteropHelper.h  GL_shader.cpp  GL_shader.h  GL_shaders.cpp  GL_shaders.h  MMapFrame.h  Makefile  Makefile.new.txt  README.txt  SaveFramesToFile.hpp  av_decoder.cpp  av_decoder.h  avcodec_helper.hpp  dependencies.txt  drmprime_out.cpp  drmprime_out.h  egl_out.cpp  egl_out.h  extra.h  extra_avcodec.h  extra_drm.h  ffmpeg_workaround_api_version.h  ffmpeg_workaround_api_version.hpp  gl_shaders.cpp  gl_videorenderer.cpp  gl_videorenderer.h  glhelp.h  hello_drmprime.cpp  play_rtp.sh  test_encoder_latency.cpp  test_latency.sh  test_util_decoder_latency.cpp
hello_drmprime/opengl/: CUDAGLInteropHelper.cpp  CUDAGLInteropHelper.h  egl_out.cpp  egl_out.h  gl_shaders.cpp  gl_videorenderer.cpp  gl_videorenderer.h  glhelp.h
in/: rtp_h264.sdp  rtp_h265.sdp  rtp_mjpeg.sdp
